# Nabdhu

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
assets/: nabdhu.desktop  run_nabdhu.sh
include/: disk_manager.h  input.h  network_manager.h  process_manager.h  renderer.h  service_manager.h  terminal.h  ui.h  widechar_width.hpp
include/fmt/: args.h  base.h  chrono.h  color.h  compile.h  core.h  fmt-c.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
src/: disk_manager.cpp  input.cpp  main.cpp  network_manager.cpp  process_manager.cpp  process_manager.h  renderer.cpp  service_manager.cpp  service_manager.h  terminal.cpp  ui.cpp  ui.h  ui_draw.cpp  ui_input.cpp  ui_menus.cpp
